<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    TextView ini untuk menampilkan text "Tambahkan Catatan". -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tambahkan_catatan"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--   1. EditText untuk input nama file.
           2. android:id="@+id/editNamaFile" merupakan id atau variabel yang isinya akan dipanggil di kelas MainActivity
            -->
    <EditText
        android:id="@+id/editNamaFile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/isikan_nama_file_di_sini"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TouchTargetSizeCheck" />

    <!--  1. EditText untuk input text catatan.
          2. android:id="@+id/editCatatan" merupakan id atau variabel yang isinya akan dipanggil di kelas MainActivity
          3. android:layout_height="183dp" adalah tinggi elemen ini.
          4. android:inputType="textLongMessage|textMultiLine" untuk mengatur bahwa elemen ini untuk input text panjang dan multiline
          5. android:singleLine="false" untuk menona
           -->

    <EditText
        android:id="@+id/editCatatan"
        android:layout_width="0dp"
        android:layout_height="183dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/isikan_catatan_di_sini"
        android:inputType="textLongMessage|textMultiLine"
        android:lines="7"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />

<!--    Tombol untuk simpan file-->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#E91E63"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCatatan"
        app:layout_constraintVertical_bias="0.966"
        tools:ignore="TextContrastCheck" />

    <!--    Tombol untuk baca file yang sudah ada-->
    <Button
        android:id="@+id/btnRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/read"
        android:layout_marginStart="170dp"
        app:layout_constraintStart_toEndOf="@id/btnSave"
        app:layout_constraintTop_toTopOf="@id/btnSave"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:minHeight="20dp"
        android:text="@string/catatan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNamaFile" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:minHeight="20dp"
        android:text="@string/nama_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>